--- a/kasa/src/scss/Note.scss
+++ b/kasa/src/scss/Note.scss
@@ -37,7 +37,6 @@
         justify-content: flex-end;
         width: auto;
         height: auto;
-        padding-right: 0em;
+        padding-right: 4.5em;
     }
-    
 }
