--- a/kasa/src/scss/Tag.scss
+++ b/kasa/src/scss/Tag.scss
@@ -151,8 +151,10 @@
     aspect-ratio: 1240 / 415;
     margin: 0 auto;
     height: 255px;
-  }
-
+    margin-right: 1em;
+    margin-left: 1em;
+    margin-top: 2em;
+}
   .caroussel .image-wrapper .button-left {
     left: 0px;
     width: 0px;
